--- a/오픈소스_데이터_분석_3강.ipynb
+++ b/오픈소스_데이터_분석_3강.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jaehwachung/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_3%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jinjenkim/Data-Analysis-with-Open-Source/blob/main/%EC%98%A4%ED%94%88%EC%86%8C%EC%8A%A4_%EB%8D%B0%EC%9D%B4%ED%84%B0_%EB%B6%84%EC%84%9D_3%EA%B0%95.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -39,7 +39,7 @@
       "outputs": [],
       "source": [
         "coordinates = (10, 20)\n",
-        "\n",
+        "x. y = coordinates\n",
         "# 튜플 언패킹\n",
         "\n",
         "print(f'x좌표: {x}, y좌표: {y}')\n",
@@ -57,11 +57,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "IO8bsKekR0W_"
+        "id": "IO8bsKekR0W_",
+        "outputId": "8f915ebe-a86c-4a63-b35a-15d6d9c29903",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "최솟값: 5, 최댓값: 32, 평균: 15.57\n"
+          ]
+        }
+      ],
       "source": [
         "def get_dataset_stats(values):\n",
         "  return min(values), max(values), sum(values) / len(values)\n",
@@ -69,7 +81,7 @@
         "data = [12, 8, 21, 17, 5, 32, 14]\n",
         "\n",
         "# 함수값 return 언패킹\n",
-        "\n",
+        "minimum, maximum, average = get_dataset_stats(data)\n",
         "print(f'최솟값: {minimum}, 최댓값: {maximum}, 평균: {average:.2f}')"
       ]
     },
