--- a/오픈소스_데이터_분석_3강.ipynb
+++ b/오픈소스_데이터_분석_3강.ipynb
@@ -60,10 +60,10 @@
       "execution_count": 1,
       "metadata": {
         "id": "IO8bsKekR0W_",
-        "outputId": "8f915ebe-a86c-4a63-b35a-15d6d9c29903",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "8f915ebe-a86c-4a63-b35a-15d6d9c29903"
       },
       "outputs": [
         {
@@ -87,11 +87,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "60qOf7uxVdAg"
+        "id": "60qOf7uxVdAg",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e5c6e2be-b07f-4e8f-9a68-2dff870acd8b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "김철수의 평균 점수: 85.0\n",
+            "이영희의 평균 점수: 91.7\n",
+            "박지민의 평균 점수: 82.7\n"
+          ]
+        }
+      ],
       "source": [
         "student_scores = [\n",
         "    ('김철수', 85, 92, 78),\n",
@@ -100,29 +114,46 @@
         "]\n",
         "\n",
         "# 반복문에서 언패킹 사용\n",
-        "for    :\n",
+        "for name, database, python, cloud in student_scores:\n",
         "  average = (database + python + cloud) / 3\n",
         "  print(f'{name}의 평균 점수: {average:.1f}')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
-        "id": "JpmgdsW9V0CY"
+        "id": "JpmgdsW9V0CY",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a35642ea-2cec-4a5c-eac0-a09d7a7fa777"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1월 판매액: 1200\n",
+            "2월 판매액: 1350\n",
+            "나머지 월 판매액: [1420, 1500, 1300, 1580, 1620, 1700, 1800, 1850, 1900, 2000]\n",
+            "첫 달(1월) 판매액: 1200\n",
+            "마지막 달(12월) 판매액: 2000\n",
+            "중간 달(2~11월)의 판매액: [1350, 1420, 1500, 1300, 1580, 1620, 1700, 1800, 1850]\n"
+          ]
+        }
+      ],
       "source": [
         "monthly_sales = [1200, 1350, 1420, 1500, 1300, 1580, 1620, 1700, 1800, 1850, 1900, 2000]\n",
         "\n",
         "# 1월, 2월 및 나머지 월 매출액\n",
-        "\n",
+        "first, second, *remaining = monthly_sales\n",
         "print(f'1월 판매액: {first}')\n",
         "print(f'2월 판매액: {second}')\n",
         "print(f'나머지 월 판매액: {remaining}')\n",
         "\n",
         "# 1월, 12월 및 나머지 월 매출액\n",
-        "\n",
+        "first, *middle, eleventh, last = monthly_sales\n",
         "print(f'첫 달(1월) 판매액: {first}')\n",
         "print(f'마지막 달(12월) 판매액: {last}')\n",
         "print(f'중간 달(2~11월)의 판매액: {middle}')"
@@ -158,17 +189,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
-        "id": "oYTUmCiXzIvV"
+        "id": "oYTUmCiXzIvV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dcba41ab-a6d2-4d53-b6c4-a7c027492fbf"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "20\n"
+          ]
+        }
+      ],
       "source": [
         "def get_coordinates( ):\n",
         "    return (10, 20, 30)\n",
         "\n",
         "# 함수 return 값 언더스코어 사용\n",
-        "\n",
+        "_, y, _ = get_coordinates()\n",
         "\n",
         "print(y)"
       ]
@@ -203,14 +246,17 @@
       },
       "outputs": [],
       "source": [
-        "number = int(input('정수를 입력하세요: '))\n",
-        "\n",
         "# try 문\n",
-        "result = 10 / number\n",
-        "print(f'결과: {result}')\n",
+        "try:\n",
+        "    number = int(input('정수를 입력하세요: '))\n",
+        "    result = 10 / number\n",
+        "    print(f'결과: {result}')\n",
         "\n",
         "# except 문\n",
-        "print('0으로 나눌 수 없습니다.')"
+        "except ZeroDivistionError:\n",
+        "    print('0으로 나눌 수 없습니다.')\n",
+        "except ValueError:\n",
+        "    print('유효한 숫자를 입력해야 합니다.')"
       ]
     },
     {
@@ -243,16 +289,19 @@
       "outputs": [],
       "source": [
         "# try 문\n",
-        "file = open('data.csv', 'r')\n",
-        "content = file.read( )\n",
-        "print(content)\n",
+        "try:\n",
+        "    file = open('data.csv', 'r')\n",
+        "    content = file.read( )\n",
+        "    print(content)\n",
         "\n",
         "# except 문\n",
-        "print('파일을 찾을 수 없습니다.')\n",
+        "except:\n",
+        "    print('파일을 찾을 수 없습니다.')\n",
         "\n",
         "# fianlly 블럭\n",
-        "print('파일 작업 종료.')\n",
-        "file.close( )"
+        "fianlly:\n",
+        "    print('파일 작업 종료.')\n",
+        "    file.close( )"
       ]
     },
     {
@@ -266,11 +315,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
-        "id": "Syg5knhezIvV"
+        "id": "Syg5knhezIvV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "71c3ea20-2a4a-4c40-802f-649761fbdda1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'이지혜': 3300000.0000000005, '구민준': 5500000.0, '방서연': 4510000.0}\n"
+          ]
+        }
+      ],
       "source": [
         "employees = {\n",
         "    '이지혜': 3000000,\n",
@@ -279,26 +340,39 @@
         "}\n",
         "\n",
         "# 함수 정의: salary * 1.1\n",
-        "\n",
+        "adjust_salary = lambda salary: salary * 1.1\n",
         "# 급여 인상\n",
-        "\n",
+        "updated_salaries = {name:adjust_salary(salary) for name, salary in employees.items()}\n",
         "print(updated_salaries)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
-        "id": "KM0psbppzIvV"
+        "id": "KM0psbppzIvV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "38afde8a-abb1-4e98-a742-0a2ef40846c0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "섭씨 온도 데이터: [25.6, 27.8, 30.5, 22.3, 28.9, 31.2, 24.7]\n",
+            "화씨 온도로 변환: [78.08, 82.04, 86.9, 72.14, 84.02, 88.16, 76.46]\n"
+          ]
+        }
+      ],
       "source": [
         "temperature_celsius = [25.6, 27.8, 30.5, 22.3, 28.9, 31.2, 24.7]\n",
         "\n",
         "# 함수 정의: 섭씨 -> 화씨\n",
-        "\n",
+        "cel_to_fah = lambda c: (c * 9/5) + 32\n",
         "# 온도 변환\n",
-        "\n",
+        "temperature_fahrenheit = list(map(cel_to_fah, temperature_celsius))\n",
         "\n",
         "print('섭씨 온도 데이터:', temperature_celsius)\n",
         "print('화씨 온도로 변환:', temperature_fahrenheit)"
@@ -362,11 +436,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
-        "id": "1E-RQnBfzIvW"
+        "id": "1E-RQnBfzIvW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "49cdb7b7-0cf7-4bc5-8ffc-64dfd95006ab"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "이름: 김지원, 점수: 85\n",
+            "이름: 박서연, 점수: 90\n",
+            "이름: 최예은, 점수: 78\n"
+          ]
+        }
+      ],
       "source": [
         "osda_students = [\n",
         "    {'name': '김지원', 'score': 85},\n",
@@ -377,7 +465,7 @@
         "]\n",
         "\n",
         "# 70점 이상 학생 목록 생성\n",
-        "\n",
+        "passed_students = list(filter(lambda student: student['score'] >= 70, osda_students))\n",
         "\n",
         "for student in passed_students:\n",
         "    print(f'이름: {student[\"name\"]}, 점수: {student[\"score\"]}')"
@@ -385,20 +473,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
-        "id": "1sVaIuwFzIvW"
+        "id": "1sVaIuwFzIvW",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3a2f9023-1630-4e29-b86d-e2e691edee75"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n"
+          ]
+        }
+      ],
       "source": [
         "from functools import reduce\n",
         "\n",
         "numbers = [3, 7, 2, 9, 5]\n",
         "\n",
         "# 최대값 생성\n",
+        "max_value = reduce(lambda x, y: x if x < y else y, numbers)\n",
         "\n",
-        "\n",
-        "print(max_value)"
+        "print(value)"
       ]
     }
   ],
